<resources>
    <string name="app_name">❤️‍🩹HealthCare</string>
    <string name="login_heading">24x7 Health Care</string>
    <string name="hintUsername">UserName</string>
    <string name="hint_password">Password</string>
    <string name="textlogin">Login</string>
    <string name="textregisterNewUser">Register new User</string>
    <string name="textregister">Register</string>
    <string name="hintemail">Email</string>
    <string name="hintconfirm_password">Confirm Password</string>
    <string name="textalready_a_user">Already have an account.</string>
    <string name="dbName">healthcare</string>
    <string name="textlab_test">Lab Test</string>
    <string name="textbuy_medicine">Buy Medicine</string>
    <string name="textfind_doctor">Find Doctor</string>
    <string name="textorder_details">Order Details</string>
    <string name="textlog_out">Log-Out</string>
    <string name="textcopyright_2023">\@copyright 2023</string>
    <string name="sp_user_info">user_info</string>
    <string name="key_username">username</string>
    <string name="textfamily_doctor">Family Doctor</string>
    <string name="textdietician">dietician</string>
    <string name="textcardiologist">Cardiologist</string>
    <string name="textdentist">Dentist</string>
    <string name="textsurgeon">Surgeon</string>
    <string name="textsupport">Support</string>
    <string name="activityHKey">activityHeading</string>
    <string name="textlorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="texthealth_articles">Health Articles</string>
    <string name="textfull_name">Full Name</string>
    <string name="textaddress">Address</string>
    <string name="textcontact_number">Contact Number</string>
    <string name="textbook">Book</string>
    <string name="textemail">Email</string>
    <string name="textno_doctors_found">No Doctors Found!</string>
    <string name="ah_fd">Family Doctors</string>
    <string name="ah_cd">Cardiologists</string>
    <string name="ah_de">Dentists</string>
    <string name="ah_di">Dieticians</string>
    <string name="ah_su">Surgeons</string>
    <string name="textaboutdevp">About Developer</string>
</resources>