<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/colorWhite"
        android:text="@string/login_heading"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:layout_marginBottom="15dp"
        android:textSize="25sp"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/colorWhite"
        android:text="@string/textregister"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5"
        android:gravity="top|center_horizontal"
        >
        <EditText
            android:id="@+id/tf_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:hint="@string/hintUsername"
            android:textColorHint="@color/colorGrey"
            android:drawableStart="@drawable/person_icon"
            android:drawablePadding="5dp"
            android:background="@drawable/round_border"
            />
        <EditText
            android:id="@+id/tf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:hint="@string/hintemail"
            android:textColorHint="@color/colorGrey"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="5dp"
            android:background="@drawable/round_border"
            />
        <EditText
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorGrey"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:background="@drawable/round_border"
            />
        <EditText
            android:id="@+id/tf_passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:hint="@string/hintconfirm_password"
            android:textColorHint="@color/colorGrey"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:background="@drawable/round_border"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textregister"
            android:background="@drawable/btn_bg"
            android:paddingHorizontal="45dp"
            android:paddingVertical="7dp"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/tv_existingUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:paddingHorizontal="15dp"
            android:paddingVertical="7dp"
            android:text="@string/textalready_a_user"
            android:textAllCaps="true"
            android:background="@drawable/border_dashed"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>