<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="15dp"
    tools:context=".FindDoctor">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/colorWhite"
        android:text="@string/login_heading"
        android:padding="10dp"
        android:layout_marginBottom="25dp"
        />
    <ImageView
        android:id="@+id/title_5start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:src="@drawable/rating"
        android:layout_marginBottom="5dp"
        />
    <GridLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_5start"
        android:columnCount="2"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/vFamilyDoctor"
            app:cardCornerRadius="7dp"
            android:elevation="15dp"
            android:layout_margin="5dp"
            android:layout_columnWeight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/family_doctor"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/textfamily_doctor"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/vDietician"
            app:cardCornerRadius="7dp"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dietician"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/textdietician"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/vDentist"
            app:cardCornerRadius="7dp"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dentist"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/textdentist"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/vSurgeon"
            app:cardCornerRadius="7dp"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:src="@drawable/surgeon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/textsurgeon"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/vCardiologist"
            app:cardCornerRadius="7dp"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cardiologist"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/textcardiologist"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/vSupport"
            app:cardCornerRadius="7dp"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/support"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/textsupport"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

</RelativeLayout>