<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:context=".AppointmentActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/colorWhite"
        android:text="@string/login_heading"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:layout_marginBottom="15dp"
        android:textSize="25sp"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/colorWhite"
        android:text="Appointment"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="2"
            android:layout_marginBottom="7dp"
            android:gravity="top|center_horizontal"
            >
            <EditText
                android:id="@+id/tf_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_columnSpan="2"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:hint="@string/textfull_name"
                android:textColorHint="@color/colorGrey"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/amaranth"
                android:background="@drawable/round_border"
                />
            <EditText
                android:id="@+id/tf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_columnSpan="2"
                android:layout_marginBottom="15dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:hint="@string/textemail"
                android:textColorHint="@color/colorGrey"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/amaranth"
                android:background="@drawable/round_border"
                />
            <EditText
                android:id="@+id/tf_address"
                android:layout_columnSpan="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textColor="@color/colorWhite"
                android:hint="@string/textaddress"
                android:textColorHint="@color/colorGrey"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/amaranth"
                android:background="@drawable/curved_corners"
                />
            <EditText
                android:id="@+id/tf_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_columnSpan="2"
                android:layout_marginBottom="25dp"
                android:inputType="phone"
                android:textColor="@color/colorWhite"
                android:hint="@string/textcontact_number"
                android:textColorHint="@color/colorGrey"
                android:drawableStart="@drawable/phone_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/amaranth"
                android:background="@drawable/round_border"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/amaranth"
                android:text="Select Date :"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/amaranth"
                android:padding="10dp"
                android:text="10 Dec 2002"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/amaranth"
                android:text="Fees :"
                />

            <TextView
                android:id="@+id/vfees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/amaranth"
                android:padding="10dp"
                android:text="500$"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </GridLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textbook"
        android:backgroundTint="#0767A8"
        android:paddingHorizontal="45dp"
        android:paddingVertical="7dp"
        android:textAllCaps="false"
        android:layout_marginBottom="15dp"
        />
</LinearLayout>